syntax = "proto3";

package splitwiser.v1;

option go_package = "github.com/mmynk/splitwiser/pkg/proto;proto";

// Service for group management
service GroupService {
  // Create a new group
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);

  // Get group details
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);

  // List all groups
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);

  // Update an existing group
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse);

  // Delete a group
  rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse);

  // Get balances for a group
  rpc GetGroupBalances(GetGroupBalancesRequest) returns (GetGroupBalancesResponse);
}

// Group represents a reusable participant list
message Group {
  string id = 1;
  string name = 2;
  repeated string member_ids = 3;  // User IDs of group members
  int64 created_at = 4;
  string creator_id = 5;           // User ID of group creator
}

// Request to create a group
message CreateGroupRequest {
  string name = 1;
  repeated string member_ids = 2;  // User IDs of members (excluding creator, who is added automatically)
}

message CreateGroupResponse {
  Group group = 1;
}

// Request to get a group
message GetGroupRequest {
  string group_id = 1;
}

message GetGroupResponse {
  Group group = 1;
}

// Request to list all groups
message ListGroupsRequest {}

message ListGroupsResponse {
  repeated Group groups = 1;
}

// Request to update a group
message UpdateGroupRequest {
  string group_id = 1;
  string name = 2;
  repeated string member_ids = 3;  // User IDs of all group members
}

message UpdateGroupResponse {
  Group group = 1;
}

// Request to delete a group
message DeleteGroupRequest {
  string group_id = 1;
}

message DeleteGroupResponse {}

// Request to get group balances
message GetGroupBalancesRequest {
  string group_id = 1;
}

// Balance information for one group member
message MemberBalance {
  string user_id = 1;      // User ID of the member
  string display_name = 2; // Display name for UI
  double net_balance = 3;  // Positive = owed money, Negative = owes money
  double total_paid = 4;   // Total amount paid across all bills
  double total_owed = 5;   // Total amount this person owes
}

// Represents a debt from one person to another
message DebtEdge {
  string from_user_id = 1;   // User ID of person who owes
  string to_user_id = 2;     // User ID of person who is owed
  double amount = 3;
  string from_name = 4;      // Display name of person who owes
  string to_name = 5;        // Display name of person who is owed
}

// Response with group balance information
message GetGroupBalancesResponse {
  repeated MemberBalance member_balances = 1;
  repeated DebtEdge debt_matrix = 2;  // Detailed who-owes-whom
}
